libdv ChangeLog

2006-08-06  Dan Dennedy <dan@dennedy.org>
	* libdv/*.S: apply patch from Mike Frysinger <vapier@gentoo.org> to
	  cleanup assembly symbols by hiding them and/or setting their type.

2006-04-10  Dan Dennedy <dan@dennedy.org>
	* playdv/playdv.c: bugfix segfault on exit due to dv_display_exit being
	  called twice.

2006-03-06  Dan Dennedy <dan@dennedy.org>
	* mmx.h: apply patches from Zan Lynx and Richard Guenther to fix x86
	  compilation on gcc 4.1.

2006-01-15  Dan Dennedy <dan@dennedy.org>
	* encode.c: apply patch from Burkhard Plaum to use gcc
	  destructor attribute to invoke dv_cleanup() when unloading
	  libdv after loading dynamically and thereby fixing a
	  memory leak.
	  
	* playdv.c: bugfix segfault on exit due to dv_display_exit()
	  being called twice: once in main() and second in atexit
	  handler created by dv_display. Thanks for hint provided
	  by Jean-Francois Panisset.

2005-01-31  Dan Dennedy <dan@dennedy.org>
	* *.S: apply patch from Nicholas Miell <nmiell@gmail.com>
	  to not require execution stack for assembler functions.

2004-12-20  Dan Dennedy <dan@dennedy.org>
	* vlc.h, mmx.h: apply patch from Daniel Kobras to improve
	  compile compatibillity by making extern inline, static inline.

2004-12-12  Dan Dennedy <dan@dennedy.org>
	* *_x86_64.S: apply patch from Dean Kolosiek to fix linker
	  compatibility.
	
2004-11-29  Charles "Buck" Krasic  <krasic@acm.org>
	* libdv 0.104 release

2004-11-29  Dan Dennedy <dan@dennedy.org>
	* libdv.pc: added -lm to make build more portable.

2004-10-19  Dan Dennedy <dan@dennedy.org>
	* applied x86-64 patch from Dean Kolosiek.

2004-07-14  Charles "Buck" Krasic  <krasic@acm.org>

	* libdv 0.103 release
	* update README to note that "bootstrap" is now obolete in light of
	  autoreconf provided by autotools.
	* some updates to the build files resulting due to changes in
	  newer versions of autotools.
	* the goal is that one could build libdv from a distribution